Update icon backgrounds on hover and fixed z-index bug

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,19 @@ body {
   background: rgba(0, 0, 0, 0.6);
 }
 
+/* Circle Icons */
+.circle-icon:hover {
+  color: #ffc107;
+  background: #000000;
+  border-radius: 50%;
+  /* cursor: pointer; */
+}
+
+.circle-icon {
+  padding: 10px;
+  color: #000000;
+}
+
 #warranty {
   position: relative;
   min-height: 200px;
@@ -60,7 +73,7 @@ body {
 footer {
   background: #000000;
   font-size: 0.8rem;
-  box-shadow: 0px -5px 3px -3px #ffc107;
+  box-shadow: 0px 5px 3px -3px #ffc107 inset;
 }
 
 #authors img {
@@ -76,5 +89,4 @@ footer {
   background-size: 100%;
   text-align: center;
   color: #fff;
-  z-index: -1;
 }
